# feliscatus

./: .gitignore  CMakeLists.txt  FelisCatusModeling.h  FelisCatusOptimizerSystem.h  README.md  README.txt  feliscatusoptimizertool_initParams.xml  model.cpp  modelTree.cpp  model_dembiasketch.cpp  model_flex.cpp  model_flexRetractLegs.cpp  model_flexRigidLegs.cpp  model_flexTwist.cpp  model_flexTwistRetractLegs.cpp  model_flexTwistRigidLegs.cpp  model_kaneschercombined.cpp  model_kanescherfig2.cpp  model_kanescherfig3.cpp  model_retractLegs.cpp  model_twist.cpp  model_twistRetractLegs.cpp  model_twistRigidLegs.cpp  optimize.cpp  optimizer_tool_template.cpp  plotActuation.py  plotRealTimeActuation.py  prescribe.cpp  realtimeparameters.m  simulate.cpp
Geometry/: build_geometry_in_blender.py  feliscatus_cylinder_with_two_offset_feet_nubs.mtl
complete/: CMakeLists.txt  FelisCatusModeling.h  FelisCatusOptimizerSystem.h  README.txt  batch.cpp  functionSetFromLog.py  modelTree.cpp  model_kaneschercombined.cpp  model_kanescherfig2.cpp  model_kanescherfig3.cpp  model_tree.cpp  optimize.cpp  optimizer_tool_template.cpp  plotActuation.py  prescribe.cpp  simulate.cpp
tutorial/: CMakeLists.txt  FelisCatusOptimizerSystem.h  FlippinFelinesOptimizerSystem.h  README.txt  counterrotation_setup.xml  counterrotation_variableinertia_initial_parameters.xml  counterrotation_variableinertia_setup.xml  modeling.cpp  optimize.cpp  optimize_input_template.cpp
